--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "shortid": "^2.2.8"
+  },
+  "devDependencies": {
+    "body-parser": "~1.0.1",
+    "express": "~4.0.0",
+    "serve": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
