--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "private": true,
   "dependencies": {
     "antd": "^3.19.8",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
+    "react-redux": "^7.1.0",
     "serve": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api-server": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
